Minor Tweaks such as point size increase and decrease, and a few bug fixes.

--- a/Point Cloud Processor/Point Cloud Processor.vcxproj.filters
+++ b/Point Cloud Processor/Point Cloud Processor.vcxproj.filters
@@ -74,5 +74,11 @@
     <Image Include="res\Point Cloud Processor.ico">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="res\bitmap1.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\bitmap2.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
