--- a/Point Cloud Processor/Point Cloud Processor.vcxproj
+++ b/Point Cloud Processor/Point Cloud Processor.vcxproj
@@ -216,6 +216,8 @@
     <None Include="res\PointCloudProcessor.rc2" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="res\bitmap1.bmp" />
+    <Image Include="res\bitmap2.bmp" />
     <Image Include="res\Point Cloud Processor.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
