--- a/Point Cloud Processor/Point Cloud Processor.vcxproj.filters
+++ b/Point Cloud Processor/Point Cloud Processor.vcxproj.filters
@@ -80,5 +80,8 @@
     <Image Include="res\bitmap2.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="res\bitmap3.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
