--- a/Point Cloud Processor/Point Cloud Processor.vcxproj.filters
+++ b/Point Cloud Processor/Point Cloud Processor.vcxproj.filters
@@ -83,5 +83,11 @@
     <Image Include="res\bitmap3.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="res\bitmap4.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\bitmap5.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
