--- a/Point Cloud Processor/Point Cloud Processor.vcxproj
+++ b/Point Cloud Processor/Point Cloud Processor.vcxproj
@@ -221,6 +221,10 @@
     <Image Include="res\bitmap3.bmp" />
     <Image Include="res\bitmap4.bmp" />
     <Image Include="res\bitmap5.bmp" />
+    <Image Include="res\bitmap6.bmp" />
+    <Image Include="res\bitmap7.bmp" />
+    <Image Include="res\bitmap8.bmp" />
+    <Image Include="res\bitmap9.bmp" />
     <Image Include="res\Point Cloud Processor.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
