--- a/Point Cloud Processor/Point Cloud Processor.vcxproj.filters
+++ b/Point Cloud Processor/Point Cloud Processor.vcxproj.filters
@@ -101,5 +101,17 @@
     <Image Include="res\bitmap9.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="res\bitmap10.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\bitmap11.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\bitmap12.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\bitmap13.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
